Fix layout issues

--- a/ckanext/ckanext-apicatalog_ui/less/module.less
+++ b/ckanext/ckanext-apicatalog_ui/less/module.less
@@ -13,6 +13,7 @@
         font-size: 18px;
         color: @white;
         padding-left: 20px;
+        border-top: none;
       }
     }
   }
